fix certificates link

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./index.css">
     <style></style>
     </link>
-    <title>My Page</title>
+    <title>Agata Bialoskorska - projects</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <ul>
             <li class="navBtns"><a href="./index.html">about me</a></li>
             <li class="navBtns"><a href="./projects.html">projects</a></li>
-            <li class="navBtns"><a href="./certs.html">certificates</a></li>
+            <li class="navBtns"><a href="./certificates.html">certificates</a></li>
         </ul>
     </nav>
     <div id="projects" class="projects">
