add contact buttons

--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
             <div class="aboutGrid">
                 <img class="myImg" src="./forAbout/agataCV.jpeg" alt="My Photo">
                 <p data-id="pHi">Hi there!</p>
-                <p>I'm just a regular person and wanna-be JavaScript frontend developer. <br>I like challenges and thinking outside the box. Sometimes I can even be a little too ambitious, but that's only because I really enjoy what I do.<br>When not programming, I like to relax by walking or swimming (or baking). <br>I am also interested in cars, as I used to work in petrol industry.
+                <p>I'm just a regular person and wanna-be JavaScript frontend developer. <br>I like challenges and
+                    thinking outside the box. Sometimes I can even be a little too ambitious, but that's only because I
+                    really enjoy what I do.<br>When not programming, I like to relax by walking or swimming (or baking).
+                    <br>I am also interested in cars, as I used to work in petrol industry.
                 </p>
-            </div>
+                <div class="contact">
+                    <a class="mail" href="mailto:abialoskorska@icloud.com">
+                      <button class="contactBtns"><i class="fa-regular fa-envelope"></i></button>
+                    </a>
+                    <a class="linkedin" href="https://www.linkedin.com/in/agata-bia%C5%82osk%C3%B3rska-b77b73134">
+                      <button class="contactBtns"><i class="fa-brands fa-linkedin"></i></button>
+                    </a>
+                  </div>                  
         </div>
 
     </div>
