--- a/projects/hangman.html
+++ b/projects/hangman.html
@@ -15,9 +15,9 @@
 <body>
     <nav class="menu">
         <ul>
-            <li class="navBtns"><a href="/index.html">about me</a></li>
-            <li class="navBtns"><a href="/projects.html">projects</a></li>
-            <li class="navBtns"><a href="./certificates.html">certificates</a></li>
+            <li class="navBtns"><a href="../index.html">about me</a></li>
+            <li class="navBtns"><a href="../projects.html">projects</a></li>
+            <li class="navBtns"><a href="../certificates.html">certificates</a></li>
         </ul>
     </nav>
     <div class="content">
