--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     <br>I am also interested in cars, as I used to work in petrol industry.
                 </p>
                 <div class="contact">
-                    <a class="mail" href="mailto:abialoskorska@icloud.com">
-                      <button class="contactBtns"><i class="fa-regular fa-envelope"></i></button>
+                    <a class="mail contactBtns" href="mailto:abialoskorska@icloud.com">
+                      <button><i class="fa-regular fa-envelope"></i></button>
                     </a>
-                    <a class="linkedin" href="https://www.linkedin.com/in/agata-bia%C5%82osk%C3%B3rska-b77b73134">
-                      <button class="contactBtns"><i class="fa-brands fa-linkedin"></i></button>
+                    <a class="linkedin contactBtns" href="https://www.linkedin.com/in/agata-bia%C5%82osk%C3%B3rska-b77b73134">
+                      <button><i class="fa-brands fa-linkedin"></i></button>
                     </a>
                   </div>                  
         </div>
