--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
                 <div class="hangman apis">
                     <p class="header">Here is a game <br> Hangman</p>
                     <img class="gameImg" src="./projects/hangman/img/s4.jpg" alt="hangman">
-                    <button class="gameBtn"><a href="./projects/hangman.html">Click if you wanna play </a></button>
+                    <a class="gameBtn" href="./projects/hangman.html"><button >Click if you wanna play </button></a>
                 </div>
             </div>
         </div>
