--- a/projects/hangman.html
+++ b/projects/hangman.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../cookies.css">
     <link rel="stylesheet" href="./hangman.css">
-    <style></style>
     </link>
     <title>Agata Bialoskorska - game</title>
 </head>
@@ -34,6 +34,12 @@
             </div>
         </div>
     </div>
+    <div class="cookie-alert">
+        This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to enhance the user experience. 
+        <button class="cookie-accept-button" onclick="acceptCookies()">Accept</button>
+      </div>
+    </div>
+    <script src="../cookies.js"></script>
     <script src="./hangman.js"></script>
 
 </body>
