--- a/certificates.html
+++ b/certificates.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./cookies.css">
     <link rel="stylesheet" href="./index.css">
-    <style></style>
+
     </link>
     <title>Agata Bialoskorska - certificates</title>
 </head>
@@ -23,6 +24,12 @@
     <div class="content">
         <div id="certificates" class=" site">
             <h1> UNDER CONSTRUCTION </h1>
+            <div class="cookie-alert">
+                This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to enhance the user experience. 
+                <button class="cookie-accept-button" onclick="acceptCookies()">Accept</button>
+              </div>
+            </div>
+            <script src="./cookies.js"></script>
 </body>
 
 </html>
