add github projects

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <a class="linkedin contactBtns" href="https://www.linkedin.com/in/agata-bia%C5%82osk%C3%B3rska-b77b73134">
                       <button><i class="fa-brands fa-linkedin"></i></button>
                     </a>
+                    <a class="github contactBtns" href="https://github.com/AgataBialoskorska">
+                        <button><i class="fa-brands fa-github"></i></button>
+                      </a>
                   </div>                  
         </div>
 
