add meta and seo

--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I'm just a regular person and wanna-be JavaScript frontend developer. I like challenges and
+    thinking outside the box. Sometimes I can even be a little too ambitious, but that's only because I
+    really enjoy what I do.">
+    <meta name="keywords"
+        content="programming, websites, design, github, linkedin, frontend, developer, javascript, js, application">
+    <meta name="author" content="Agata Bialoskorska">
     <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./cookies.css">
     <link rel="stylesheet" href="./index.css">
-
-    </link>
-    <title>Agata Bialoskorska - projects</title>
+    <title>Agata Bialoskorska - Projects</title>
 </head>
 
 <body>
@@ -29,7 +33,8 @@
                 <div class="hello apis">
                     <p class="header">Here is "Hello World"<br>in several programming languages</p>
                     <img class="langIcon" src="./projects/256x256bb.jpg" alt="Programming Icon">
-                    <a class="gameBtn" href="https://github.com/AgataBialoskorska/hello-world"><button >link to GitHub</button></a>
+                    <a class="gameBtn" href="https://github.com/AgataBialoskorska/hello-world"><button>link to
+                            GitHub</button></a>
 
                 </div>
                 <div class="weatherApi apis">
@@ -58,14 +63,15 @@
                 <div class="hangman apis">
                     <p class="header">Here is a game <br> Hangman</p>
                     <img class="gameImg" src="./projects/hangman/img/s4.jpg" alt="hangman">
-                    <a class="gameBtn" href="./projects/hangman.html"><button >Click if you wanna play </button></a>
+                    <a class="gameBtn" href="./projects/hangman.html"><button>Click if you wanna play </button></a>
                 </div>
                 <div class="disneyApi apis">
                     <p class="header">Here is a random character <br>from Disney movie.</p>
                     <img class="image" src="" alt="Photo of Disney Character">
                     <div class="disneyDes">
-                    <p class="nameOfDisney">Oh sorry, data is temporarily unavailable</p>
-                    <p class="disneyFilms "></p></div>
+                        <p class="nameOfDisney">Oh sorry, data is temporarily unavailable</p>
+                        <p class="disneyFilms "></p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -73,9 +79,10 @@
 
     </div>
     <div class="cookie-alert">
-        This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to enhance the user experience. 
+        This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to enhance
+        the user experience.
         <button class="cookie-accept-button" onclick="acceptCookies()">Accept</button>
-      </div>
+    </div>
     </div>
     <script src="./cookies.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
