--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I'm just a regular person and wanna-be JavaScript frontend developer. I like challenges and
+    thinking outside the box. Sometimes I can even be a little too ambitious, but that's only because I
+    really enjoy what I do.">
+    <meta name="keywords"
+        content="programming, websites, design, github, linkedin, frontend, developer, javascript, js, application">
+    <meta name="author" content="Agata Bialoskorska">
     <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./cookies.css">
     <link rel="stylesheet" href="./index.css">
-
-    </link>
-    <title>Agata Bialoskorska - portfolio</title>
+    <title>Agata Bialoskorska - Portfolio</title>
 </head>
 
 <body>
@@ -34,22 +38,24 @@
                 </p>
                 <div class="contact">
                     <a class="mail contactBtns" href="mailto:abialoskorska@icloud.com">
-                      <button><i class="fa-regular fa-envelope"></i></button>
+                        <button><i class="fa-regular fa-envelope"></i></button>
                     </a>
-                    <a class="linkedin contactBtns" href="https://www.linkedin.com/in/agata-bia%C5%82osk%C3%B3rska-b77b73134">
-                      <button><i class="fa-brands fa-linkedin"></i></button>
+                    <a class="linkedin contactBtns"
+                        href="https://www.linkedin.com/in/agata-bia%C5%82osk%C3%B3rska-b77b73134">
+                        <button><i class="fa-brands fa-linkedin"></i></button>
                     </a>
                     <a class="github contactBtns" href="https://github.com/AgataBialoskorska">
                         <button><i class="fa-brands fa-github"></i></button>
-                      </a>
-                  </div>                  
-        </div>
+                    </a>
+                </div>
+            </div>
 
-    </div>
-    <div class="cookie-alert">
-        This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to enhance the user experience. 
-        <button class="cookie-accept-button" onclick="acceptCookies()">Accept</button>
-      </div>
+        </div>
+        <div class="cookie-alert">
+            This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to
+            enhance the user experience.
+            <button class="cookie-accept-button" onclick="acceptCookies()">Accept</button>
+        </div>
     </div>
     <script src="./cookies.js"></script>
 
