--- a/projects/hangman.html
+++ b/projects/hangman.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I'm just a regular person and wanna-be JavaScript frontend developer. I like challenges and
+    thinking outside the box. Sometimes I can even be a little too ambitious, but that's only because I
+    really enjoy what I do.">
+    <meta name="keywords"
+        content="programming, websites, design, github, linkedin, frontend, developer, javascript, js, application">
+    <meta name="author" content="Agata Bialoskorska">
     <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../cookies.css">
     <link rel="stylesheet" href="./hangman.css">
-    </link>
-    <title>Agata Bialoskorska - game</title>
+    <title>Agata Bialoskorska - Game</title>
 </head>
 
 <body>
@@ -35,9 +40,10 @@
         </div>
     </div>
     <div class="cookie-alert">
-        This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to enhance the user experience. 
+        This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to enhance
+        the user experience.
         <button class="cookie-accept-button" onclick="acceptCookies()">Accept</button>
-      </div>
+    </div>
     </div>
     <script src="../cookies.js"></script>
     <script src="./hangman.js"></script>
