--- a/certificates.html
+++ b/certificates.html
@@ -27,14 +27,34 @@
     </nav>
     <div class="content">
         <div id="certificates" class=" site">
-            <h1> UNDER CONSTRUCTION </h1>
-            <div class="cookie-alert">
-                This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to
-                enhance the user experience.
-                <button class="cookie-accept-button" onclick="acceptCookies()">Accept</button>
+            <h1> my certificates</h1>
+            <div class='certContent'>
+                <div class="certs">
+                    <a href="https://agatabialoskorska.imgix.net/udemy.jpg">
+                        <img src="https://agatabialoskorska.imgix.net/udemy.jpg" alt="Udemy Certificate"></a>
+                </div>
+                <div class="certs">
+                    <a href="https://agatabialoskorska.imgix.net/microsoft.jpg">
+                        <img src="https://agatabialoskorska.imgix.net/microsoft.jpg" alt="Microsoft Certificate"></a>
+                </div>
+                <div class="certs">
+                    <a href="https://agatabialoskorska.imgix.net/suse.PNG">
+                        <img src="https://agatabialoskorska.imgix.net/suse.PNG" alt="SUSE Certificate"></a>
+                </div>
+                <div class="certs">
+                    <a href="https://agatabialoskorska.imgix.net/netware.jpg">
+                        <img src="https://agatabialoskorska.imgix.net/netware.PNG" alt="Netware Certificate"></a>
+                </div>
             </div>
+
         </div>
-        <script src="./cookies.js"></script>
+    </div>
+    <div class="cookie-alert">
+        This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to
+        enhance the user experience.
+        <button class="cookie-accept-button" onclick="acceptCookies()">Accept</button>
+    </div>
+    <script src="./cookies.js"></script>
 </body>
 
 </html>
