--- a/projects/hangman.html
+++ b/projects/hangman.html
@@ -13,6 +13,7 @@
     <meta name="author" content="Agata Bialoskorska">
     <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../cookies.css">
+    <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="./hangman.css">
     <title>Agata Bialoskorska - Game</title>
 </head>
@@ -31,7 +32,7 @@
             <div class="hangman hangGrid">
                 <div class="password "></div>
 
-                <img class="" src="./hangman/img/s0.jpg">
+                <img class="" src="./hangman/img/s0.jpg" alt="Hangman Picture">
 
                 <div class="alphabet "></div>
                 <div class="result  hide"></div>
