--- a/certificates.html
+++ b/certificates.html
@@ -42,7 +42,7 @@
                         <img src="https://agatabialoskorska.imgix.net/suse.PNG" alt="SUSE Certificate"></a>
                 </div>
                 <div class="certs">
-                    <a href="https://agatabialoskorska.imgix.net/netware.jpg">
+                    <a href="https://agatabialoskorska.imgix.net/netware.PNG">
                         <img src="https://agatabialoskorska.imgix.net/netware.PNG" alt="Netware Certificate"></a>
                 </div>
             </div>
