--- a/projects.html
+++ b/projects.html
@@ -45,19 +45,19 @@
                     <button class="btn wBtn">click to change city</button>
                     <div class="dataWeatherBox">
                         <div class=" icon">🏠 City:</div>
-                        <div class="cityName"></div>
+                        <div class="cityName wDesc"></div>
                         <div class=" icon">🌡️ Temperature:</div>
-                        <div class="temperature"></div>
+                        <div class="temperature wDesc"></div>
                         <div class=" icon">👃 Feels like:</div>
-                        <div class="tempFeel"></div>
+                        <div class="tempFeel wDesc"></div>
                         <div class=" icon">💬 Comment:</div>
-                        <div class="description"></div>
+                        <div class="description wDesc"></div>
                         <div class=" icon">💧 Humidity:</div>
-                        <div class="humidity"></div>
+                        <div class="humidity wDesc"></div>
                         <div class=" icon">💨 Wind speed:</div>
-                        <div class="wind"></div>
+                        <div class="wind wDesc"></div>
                         <div class=" icon">🌄 Sunset:</div>
-                        <div class="sunset"></div>
+                        <div class="sunset wDesc"></div>
                     </div>
                 </div>
                 <div class="hangman apis">
