--- a/projects/hangman/hangman.html
+++ b/projects/hangman/hangman.html
@@ -10,8 +10,8 @@
         content="programming, websites, design, github, linkedin, frontend, developer, javascript, js, application, game, hangman">
     <meta name="author" content="Agata Bialoskorska">
     <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../cookies.css">
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="/cookies.css">
+    <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="./hangman.css">
     <title>Agata Bialoskorska - Game</title>
 </head>
@@ -20,9 +20,9 @@
     <div class="content">
         <nav class="menu">
             <ul>
-                <li class="navBtns"><a href="../">about me</a></li>
-                <li class="navBtns"><a href="../projects.html">projects</a></li>
-                <li class="navBtns"><a href="../certificates.html">certificates</a></li>
+                <li class="navBtns"><a href="/">about me</a></li>
+                <li class="navBtns"><a href="/projects.html">projects</a></li>
+                <li class="navBtns"><a href="/certificates.html">certificates</a></li>
             </ul>
         </nav>
         <div id="hangman" class="hangman site">
@@ -30,14 +30,14 @@
             <div class="hangGrid">
                 <div class="password "></div>
 
-                <img class="" src="./hangman/img/s0.jpg" alt="Hangman Picture">
+                <img class="" src="./img/s0.jpg" alt="Hangman Picture">
 
                 <div class="alphabet "></div>
                 <div class="result  hide"></div>
-                <button class="reset hide">NEW GAME</button>
+                <a class="reset btn hide">NEW GAME</a>
             </div>
-            <button class="backBtn"><i class="fa-solid fa-angles-left"></i> back</button>
-            <button class="gitHangmanBtn"><i class="fa-brands fa-square-github"></i> repository</button>
+            <a class="backBtn btn"><i class="fa-solid fa-angles-left"></i> back</a>
+            <a class="gitHangmanBtn btn"><i class="fa-brands fa-square-github"></i> repository</a>
         </div>
         <div class="cookie-alert">
             This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to
@@ -46,7 +46,7 @@
             <button class="cookie-accept-button" onclick="acceptCookies()">Accept</button>
         </div>
     </div>
-    <script src="../cookies.js"></script>
+    <script src="/cookies.js"></script>
     <script src="./hangman.js"></script>
 </body>
 
