--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,11 @@
         <div id="projects" class="projects site">
             <h1>my projects </h1>
             <div class='projectsContent'>
+                <div class="jabi apis">
+                    <p class="header">Here is the WebPage:<br><a href="https://www.jabi.pl"><i class="fa-solid fa-angles-right fa-2xs"></i> jabi.pl</a></p>
+                    <img class="jabiIcon" src="./projects/jabi.png" alt="jabi.pl">
+                    <a class="jabiBtn btn" href="https://github.com/JacekBialoskorski/jabi-pl"><i class="fa-brands fa-square-github"></i> repository</a>
+                </div>
                 <div class="hello apis">
                     <p class="header">Here is "Hello World"<br>in several programming languages</p>
                     <img class="helloIcon" src="./projects/programming.jpg" alt="Programming Icon">
@@ -39,7 +44,7 @@
                     <img class="weatherIcon"
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Weather-sun-clouds-shower.svg/2048px-Weather-sun-clouds-shower.svg.png"
                         alt="Weather Icon">
-                    <button class="wBtn">click to change city</button>
+                    <a class="wBtn btn">click to change city</a>
                     <div class="dataWeatherBox">
                         <div class=" icon">🏠 City:</div>
                         <div class="cityName wDesc"><b></b></div>
@@ -58,10 +63,10 @@
                     </div>
                 </div>
                 <div class="hangmanProject apis">
-                    <p class="headerH">Here is a game <br> Hangman</p>
+                    <p class="header">Here is a game <br> Hangman</p>
                     <img class="gameImg" src="./projects/hangman/img/s4.jpg" alt="hangman">
-                    <a class="gameBtn btn" href="./projects/hangman.html">play</a>
-                    <a class="gameBtnGit btn" href='https://github.com/AgataBialoskorska/myHangman'><i class="fa-brands fa-square-github"></i> repository</a>
+                    <a class="gameBtn btn" href="./projects/hangman/hangman.html">play</a>
+                    <a class="gameBtnGit btn" href='https://github.com/AgataBialoskorska/my-portfolio/tree/master/projects/hangman'><i class="fa-brands fa-square-github"></i> repository</a>
                 </div>
                 <div class="disneyApi apis">
                     <p class="header">Here is a random character <br>from Disney movie.</p>
