--- a/projects/hangman/hangman.html
+++ b/projects/hangman/hangman.html
@@ -10,8 +10,8 @@
         content="programming, websites, design, github, linkedin, frontend, developer, javascript, js, application, game, hangman">
     <meta name="author" content="Agata Bialoskorska">
     <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/cookies.css">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="../../cookies.css">
+    <link rel="stylesheet" href="../../index.css">
     <link rel="stylesheet" href="./hangman.css">
     <title>Agata Bialoskorska - Game</title>
 </head>
@@ -20,9 +20,9 @@
     <div class="content">
         <nav class="menu">
             <ul>
-                <li class="navBtns"><a href="/">about me</a></li>
-                <li class="navBtns"><a href="/projects.html">projects</a></li>
-                <li class="navBtns"><a href="/certificates.html">certificates</a></li>
+                <li class="navBtns"><a href="../../">about me</a></li>
+                <li class="navBtns"><a href="../../projects.html">projects</a></li>
+                <li class="navBtns"><a href="../../certificates.html">certificates</a></li>
             </ul>
         </nav>
         <div id="hangman" class="hangman site">
