--- a/projects.html
+++ b/projects.html
@@ -68,14 +68,14 @@
                     <a class="gameBtn btn" href="./projects/hangman/hangman.html">play</a>
                     <a class="gameBtnGit btn" href='https://github.com/AgataBialoskorska/my-portfolio/tree/master/projects/hangman'><i class="fa-brands fa-square-github"></i> repository</a>
                 </div>
-                <div class="disneyApi apis">
+                <!-- <div class="disneyApi apis">
                     <p class="header">Here is a random character <br>from Disney movie.</p>
                     <img class="image" src="" alt="Photo of Disney Character">
                     <div class="disneyDes">
                         <p class="nameOfDisney">Oh sorry, data is temporarily unavailable</p>
                         <p class="disneyFilms "></p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="cookie-alert">
