--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I'm just a regular person and wanna-be JavaScript frontend developer. I like challenges and
-    thinking outside the box. Sometimes I can even be a little too ambitious, but that's only because I
+    <meta name="description" content="I'm just a regular person and wanna-be JavaScript frontend developer. I like challenges and thinking outside the box. Sometimes I can even be a little too ambitious, but that's only because I
     really enjoy what I do.">
     <meta name="keywords"
         content="programming, websites, design, github, linkedin, frontend, developer, javascript, js, application">
     <meta name="author" content="Agata Bialoskorska">
     <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./cookies.css">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./style/cookies.css">
+    <link rel="stylesheet" href="./style/about.css">
     <title>Agata Bialoskorska - Portfolio</title>
 </head>
 
@@ -22,20 +21,14 @@
         <nav class="menu">
             <ul>
                 <li class="navBtns"><a href="./">about me</a></li>
-                <li class="navBtns"><a href="./projects.html">projects</a></li>
-                <li class="navBtns"><a href="./certificates.html">certificates</a></li>
+                <li class="navBtns"><a href="./pages/projects.html">projects</a></li>
+                <li class="navBtns"><a href="./pages/certificates.html">certificates</a></li>
             </ul>
         </nav>
-        <div id="aboutMe" class="aboutMe site">
-            <h1 data-id="myName">Agata Białoskórska</h1>
-            <div class="aboutGrid">
-                <img class="myImg" src="./forAbout/agataCV.jpeg" alt="My Photo">
-                <p data-id="pHi">Hi there!</p>
-                <p>I'm just a regular person and wanna-be JavaScript frontend developer. <br>I like challenges and
-                    thinking outside the box. Sometimes I can even be a little too ambitious, but that's only because I
-                    really enjoy what I do.<br>When not programming, I like to relax by walking or swimming (or baking).
-                    <br>I am also interested in cars, as I used to work in petrol industry.
-                </p>
+        <h1> Agata Białoskórska</h1>
+        <div id="aboutMe" class="aboutMe">
+            <div class="left">
+                <img src="./projects/forAbout/agataCV.jpeg" alt="My Photo">
                 <div class="contact">
                     <a class="mail contactBtns btn" href="mailto:abialoskorska@icloud.com">
                         <i class="fa-regular fa-envelope"></i>
@@ -49,6 +42,17 @@
                     </a>
                 </div>
             </div>
+            <div class="right">
+                <p>Hi there!</p>
+                <p>I’m an aspiring frontend engineer with not-so-obvious past experience. <br />
+                    I used to work in customer service, accounting, art shop, e-commerce, also petrol business as a
+                    manager.<br />
+                    I hope I’ll be able to push myself more to broaden coding skills used in my projects (at one of them
+                    you’re looking right now).</p>
+                <p> On a private side of things, I like to learn languages - mainly English and German, but also to
+                    discover world of javascript frameworks (Vue at the moment).
+                </p>
+            </div>
         </div>
         <div class="cookie-alert">
             This website uses <a href="https://www.cloudflare.com/learning/privacy/what-are-cookies/">cookies</a> to
@@ -56,7 +60,7 @@
             <button class="cookie-accept-button" onclick="acceptCookies()">Accept</button>
         </div>
     </div>
-    <script src="./cookies.js"></script>
+    <script src="./scripts/cookies.js"></script>
 </body>
 
 </html>
