change photo path - hotfix

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1> Agata Białoskórska</h1>
         <div id="aboutMe" class="aboutMe">
             <div class="left">
-                <img src="./projects/forAbout/agataCV.jpeg" alt="My Photo">
+                <img src="./forAbout/agataCV.jpeg" alt="My Photo">
                 <div class="contact">
                     <a class="mail contactBtns btn" href="mailto:abialoskorska@icloud.com">
                         <i class="fa-regular fa-envelope"></i>
