--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D1HX5H6K15"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-D1HX5H6K15');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +51,8 @@
             </div>
             <div class="weatherApi apis">
                 <p class="header">Random city and its weather</p>
-                <a class="wBtn btn"><img class="weatherIcon" src="../projects/weather.png" alt="Weather Icon">click to<br/>choose a
+                <a class="wBtn btn"><img class="weatherIcon" src="../projects/weather.png" alt="Weather Icon">click
+                    to<br />choose a
                     city</a>
                 <div class="dataWeatherBox">
                     <div class=" icon">🏠 City:</div>
