--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D1HX5H6K15"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-D1HX5H6K15');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,26 +63,26 @@
                             </li>
                             <li>
                                 <label for="slide-5"><img src="https://agatabialoskorska.imgix.net/netware.PNG"
-                                    alt="Netware Certificate"></label>
-                                </li>
-                            </ul>
-                            <ul class="carousel__slides">
-                                <li class="carousel__slide">
-                                    <figure>
-                                        <div>
-                                            <img src="https://agatabialoskorska.imgix.net/microsoft.jpg"
+                                        alt="Netware Certificate"></label>
+                            </li>
+                        </ul>
+                        <ul class="carousel__slides">
+                            <li class="carousel__slide">
+                                <figure>
+                                    <div>
+                                        <img src="https://agatabialoskorska.imgix.net/microsoft.jpg"
                                             alt="Microsoft Certificate">
-                                        </div>
-                                    </figure>
-                                </li>
-                                <li class="carousel__slide">
-                                    <figure>
-                                        <div>
-                                            <img src="https://agatabialoskorska.imgix.net/google.png"
-                                                alt="Google Certificate">
-                                        </div>
-                                    </figure>
-                                </li>
+                                    </div>
+                                </figure>
+                            </li>
+                            <li class="carousel__slide">
+                                <figure>
+                                    <div>
+                                        <img src="https://agatabialoskorska.imgix.net/google.png"
+                                            alt="Google Certificate">
+                                    </div>
+                                </figure>
+                            </li>
                             <li class="carousel__slide">
                                 <figure>
                                     <div>
