add new project

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -35,16 +35,23 @@
         </nav>
         <h1>my projects </h1>
         <div id="projects" class="projects">
+            <div class="bialoskorskieu">
+                <p class="header">Rebuild Next.js webpage<br><a href="https://www.bialoskorski.eu"><i
+                            class="fa-solid fa-angles-right fa-2xs"></i> bialoskorski.eu</a></p>
+                <img class="pageIcon" src="../projects/bialoskorskieu.png" alt="bialoskorski.eu">
+                <a class="btn" href="https://github.com/JakubBialoskorski/bialoskorski-eu/pull/64"><i
+                        class="fa-brands fa-square-github"></i> repository</a>
+            </div>
             <div class="jabi">
                 <p class="header">My second project<br><a href="https://www.jabi.pl"><i
                             class="fa-solid fa-angles-right fa-2xs"></i> jabi.pl</a></p>
-                <img class="jabiIcon" src="../projects/jabi.png" alt="jabi.pl">
-                <a class="jabiBtn btn" href="https://github.com/JacekBialoskorski/jabi-pl"><i
+                <img class="pageIcon" src="../projects/jabi.png" alt="jabi.pl">
+                <a class="btn" href="https://github.com/JacekBialoskorski/jabi-pl"><i
                         class="fa-brands fa-square-github"></i> repository</a>
             </div>
             <div class="hello">
                 <p class="header">"Hello World"<br>in several programming languages</p>
-                <img class="helloIcon" src="../projects/programming.jpg" alt="Programming Icon">
+                <img class="pageIcon" src="../projects/programming.jpg" alt="Programming Icon">
                 <a class="helloBtn btn" href="https://github.com/AgataBialoskorska/hello-world"><i
                         class="fa-brands fa-square-github"></i> repository</a>
             </div>
