--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <meta name="keywords"
         content="programming, websites, design, github, linkedin, frontend, developer, javascript, js, application">
     <meta name="author" content="Agata Bialoskorska">
-    <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style/about.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Agata Bialoskorska - Portfolio</title>
 </head>
 
