--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -18,7 +18,7 @@
     <meta name="keywords"
         content="programming, websites, design, github, linkedin, frontend, developer, javascript, js, application">
     <meta name="author" content="Agata Bialoskorska">
-    <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="../style/index.css">
     <link rel="stylesheet" href="../style/certificates.css">
     <title>Agata Bialoskorska - Certificates</title>
