--- a/pages/projects.html
+++ b/pages/projects.html
@@ -19,7 +19,7 @@
     <meta name="keywords"
         content="programming, websites, design, github, linkedin, frontend, developer, javascript, js, application, projects, API">
     <meta name="author" content="Agata Bialoskorska">
-    <script src="https://kit.fontawesome.com/37a8b7fe0b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="../style/projects.css">
     <title>Agata Bialoskorska - Projects</title>
 </head>
